--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,8 @@ services:
         sync: false
       - key: CLOUDINARY_SECRET
         sync: false
+      - key: RENDER_EXTERNAL_URL
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: strapi
