--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: productivity-tips-api
+    name: testing-strapi-deploy
     env: node
     plan: free
     # Update the following line with your Strapi GitHub repo
