--- a/render.yaml
+++ b/render.yaml
@@ -34,7 +34,21 @@ services:
         generateValue: true
       - key: APP_KEYS
         generateValue: true
-
+  - type: web
+      name: testing-strapi-deploy
+      env: node
+      plan: free
+      # Update the following line with your Remix GitHub repo
+      repo: https://github.com/PaulBratslavsky/remix-frontend
+      branch: master
+      buildCommand: npm install && npm run build
+      startCommand: npm start
+      envVars:
+        - key: STRAPI_URL_BASE
+          fromService:
+            type: web
+            name: productivity-tips-api
+            envVarKey: RENDER_EXTERNAL_URL
 databases:
   - name: strapi
     plan: free # This database will expire 90 days after creation
